<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache</groupId>
        <artifactId>apache</artifactId>
        <version>25</version>
    </parent>

    <groupId>org.apache.seatunnel.web</groupId>
    <artifactId>seatunnel-web</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>SeaTunnel</name>


    <properties>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <file_encoding>UTF-8</file_encoding>

        <auto-service.version>1.0.1</auto-service.version>
        <lombok.version>1.18.42</lombok.version>
        <typesafe.version>1.4.3</typesafe.version>
        <jsqlparser.version>4.9</jsqlparser.version>

        <!-- Spring AI -->
        <spring-ai.version>1.1.0</spring-ai.version>
        <spring-ai-alibaba.version>1.1.0.0</spring-ai-alibaba.version>
        <spring-ai-alibaba-extensions.version>1.1.2.0</spring-ai-alibaba-extensions.version>
    </properties>


    <modules>
        <module>seatunnel-web-api</module>
        <module>seatunnel-web-common</module>
        <module>seatunnel-web-datasource-connection</module>
        <module>seatunnel-web-datasource-plugins</module>
        <module>seatunnel-web-ui</module>
        <module>seatunnel-web-dao</module>
        <module>seatunnel-web-dao-plugin</module>
        <module>seatunnel-web-bom</module>
        <module>seatunnel-web-spi</module>
        <module>seatunnel-web-core</module>
        <module>seatunnel-web-engine-client</module>
        <module>seatunnel-web-dist</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-connection</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-plugins</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-mysql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-mysql-cdc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-oracle</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-postgresql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-doris</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-kingbase</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-dameng</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-datasource-all</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-dao-plugin-all</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-engine-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.seatunnel.web</groupId>
                <artifactId>seatunnel-web-dao-api</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>${auto-service.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>${typesafe.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.jsqlparser</groupId>
            <artifactId>jsqlparser</artifactId>
            <version>${jsqlparser.version}</version>
        </dependency>



    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
